fixed homepage banner on ie6

--- a/public_html/stylesheets/home.css
+++ b/public_html/stylesheets/home.css
@@ -18,8 +18,6 @@ div.NewsBox > *, div.SmallNewsBox > * {
 
 a.NewsImg {
 	float: right;
-	padding: 0;
-	margin: 0;
 }
 
 a.RightColumnAction {
